# ros2_industrial_hub

./: README.md
fanuc/control/: CMakeLists.txt  hw_plugin.xml  package.xml
fanuc/control/config/: params.yaml
fanuc/control/include/: fanuc_publishers.hpp  hw_fanuc.h
fanuc/control/launch/: start_robot_control.launch.py
fanuc/control/src/: dpm.cpp  fanuc_publishers.cpp  fanuc_publishers.hpp  hw_fanuc.cpp
fanuc/description/: CMakeLists.txt  package.xml
fanuc/description/launch/: robot_visu.launch.py
fanuc/description/urdf/: crx.ros2_control.xacro
fanuc/description/urdf/crx10ia/: crx10ia.urdf.xacro  crx10ia.xacro
fanuc/description/urdf/crx10ia_l/: crx10ia_l.urdf  crx10ia_l.urdf.xacro  crx10ia_l.urdf_OLD.xacro  crx10ia_l.xacro  robot.dae
fanuc/description/urdf/crx20ia_l/: crx20ia_l.urdf.xacro  crx20ia_l.xacro  crx20ia_l_sim.xacro
fanuc/description/urdf/crx25ia/: crx25ia.urdf.xacro  crx25ia.xacro
fanuc/description/urdf/crx30ia/: crx30ia.urdf.xacro  crx30ia.xacro
fanuc/description/urdf/crx5ia/: crx5ia.urdf.xacro  crx5ia.xacro
fanuc/ethernet_ip/: CMakeLists.txt  package.xml
fanuc/ethernet_ip/include/: ethernet_ip.hpp
fanuc/ethernet_ip/src/: ethernet_ip.cpp
fanuc/fanuc_rmi/: README.md
fanuc/moveit_config/crx20ia_l_moveit_config/: .setup_assistant  package.xml
fanuc/moveit_config/crx20ia_l_moveit_config/config/: crx20ia_l.urdf.xacro
